<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="4"
    android:background="@color/white"
    tools:context="com.example.a10122701_myselfapps.Fragment.HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="42dp"
            android:layout_marginRight="42dp"
            android:layout_centerVertical="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/defaultuser"

                    android:layout_gravity="center"
                    app:civ_border_width="2dp"
                    app:civ_border_color="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/namahead"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:padding="5dp"
                    android:textStyle="bold"
                    android:background="@drawable/background_verydarkaqua"
                    android:layout_gravity="center" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:elevation="36dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="42dp"
                android:layout_marginRight="42dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/title_aboutme"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/aboutme"
                    android:textColor="@color/grey"
                    android:textSize="12sp"
                    android:padding="10dp" />

                <View
                    android:layout_width="200dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:background="@color/grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:padding="15dp"
                    android:text="@string/namalengkap"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/background_verydarkaqua" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/nim"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/background_lightaqua" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/kelas"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/background_verydarkaqua" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/jeniskelamin"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/background_lightaqua" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/ttl"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/background_verydarkaqua" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/hobi"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/background_lightaqua" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:padding="15dp"
                    android:text="@string/citacita"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:background="@drawable/background_verydarkaqua" />

            </LinearLayout>

    </RelativeLayout>

</LinearLayout>